--- a/lib/myapp_web/components/layouts/app.html.heex
+++ b/lib/myapp_web/components/layouts/app.html.heex
@@ -1,14 +1,5 @@
 <header class="bg-white">
-  <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
-    <div class="flex lg:flex-1">
-      <a href="/" class="-m-1.5 p-1.5 text-2xl font-semibold">
-        [Your Name]
-      </a>
-    </div>
-    <div class="flex gap-x-12">
-      <a href="#contact" class="text-sm font-semibold leading-6 text-gray-900">Contact</a>
-    </div>
-  </nav>
+  <.main_nav />
 </header>
 <main>
   <.flash_group flash={@flash} />
