--- a/lib/myapp_web/components/layouts/app.html.heex
+++ b/lib/myapp_web/components/layouts/app.html.heex
@@ -1,6 +1,4 @@
-<header class="bg-white">
-  <.main_nav />
-</header>
+<.header />
 <main>
   <.flash_group flash={@flash} />
   <%= @inner_content %>
